--- a/docs/visual-basic/misc/bc30067.md
+++ b/docs/visual-basic/misc/bc30067.md
@@ -7,15 +7,15 @@ f1_keywords:
 helpviewer_keywords:
 - BC30067
 ms.assetid: 207fef65-4383-4120-9e5a-e0e14d168a72
-ms.openlocfilehash: 961f6b4e84d2759d0db3eebac1bdd81cd2704504
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 4d385d58d29ad6003ecd1926fb779f563ffd6ce5
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53765205"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54739341"
 ---
 # <a name="exit-function-is-not-valid-in-a-sub-or-property"></a>Sub 또는 Property에서는 'Exit Function'을 사용할 수 없습니다.
-`Exit Function`는 `Sub` 프로시저 또는 `Property` 프로시저에 나타납니다. `Exit` 문은 해당 문이 발생한 블록과 일치해야 합니다.  
+`Exit Function` 는 `Sub` 프로시저 또는 `Property` 프로시저에 나타납니다. `Exit` 문은 해당 문이 발생한 블록과 일치해야 합니다.  
   
  **오류 ID:** BC30067  
   
@@ -23,7 +23,7 @@ ms.locfileid: "53765205"
   
 -   `Exit Function` 를 `Exit Sub` 또는 `Exit Property` 문으로 적절하게 바꿉니다.  
   
-## <a name="see-also"></a>참고 항목  
- [Sub 프로시저](../../visual-basic/programming-guide/language-features/procedures/sub-procedures.md)  
- [Function 프로시저](../../visual-basic/programming-guide/language-features/procedures/function-procedures.md)  
- [속성 프로시저](../../visual-basic/programming-guide/language-features/procedures/property-procedures.md)
+## <a name="see-also"></a>참고자료
+- [Sub 프로시저](../../visual-basic/programming-guide/language-features/procedures/sub-procedures.md)
+- [Function 프로시저](../../visual-basic/programming-guide/language-features/procedures/function-procedures.md)
+- [속성 프로시저](../../visual-basic/programming-guide/language-features/procedures/property-procedures.md)
