--- a/docs/visual-basic/misc/bc30183.md
+++ b/docs/visual-basic/misc/bc30183.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30183
 ms.assetid: 37206d31-4247-414c-88d0-ebba1b00f10c
-ms.openlocfilehash: 5588ddeeb0cbf39d4eb590b686a9a2e88b28ce47
-ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.openlocfilehash: 2a906197a1d6bdcd54e4fb171134f1d621a3b6ba
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 05/04/2018
-ms.locfileid: "33607200"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54603862"
 ---
 # <a name="keyword-is-not-valid-as-an-identifier"></a>키워드를 식별자로 사용할 수 없습니다.
 키워드는 요소 이름이 필요한 경우에 발생합니다. 변수 또는 프로시저와 같은 요소에 대한 컨텍스트 호출입니다.  
@@ -23,5 +23,5 @@ ms.locfileid: "33607200"
   
 -   키워드를 잘못된 요소 이름으로 바꿉니다.  
   
-## <a name="see-also"></a>참고 항목  
- [연산자 및 식](../../visual-basic/programming-guide/language-features/operators-and-expressions/index.md)
+## <a name="see-also"></a>참고자료
+- [연산자 및 식](../../visual-basic/programming-guide/language-features/operators-and-expressions/index.md)
