--- a/docs/visual-basic/misc/bc30412.md
+++ b/docs/visual-basic/misc/bc30412.md
@@ -7,15 +7,15 @@ f1_keywords:
 helpviewer_keywords:
 - BC30412
 ms.assetid: 8c941523-8e5d-4bf0-8a52-772ecd5d5592
-ms.openlocfilehash: f2544e578b08216412b1e5f3a919fc001626ceb2
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: a6aa157049b821af86134be17545084502b589c3
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53780974"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54674013"
 ---
 # <a name="withevents-variables-must-have-an-as-clause"></a>'WithEvents' 변수에는 'As' 절이 있어야 합니다.
-`As` 절에 `WithEvents` 키워드를 제공하지 않았습니다. 이벤트를 발생시킬 수 있는 특정 클래스로 변수를 선언합니다.  
+`As` 절에 `WithEvents`키워드를 제공하지 않았습니다. 이벤트를 발생시킬 수 있는 특정 클래스로 변수를 선언합니다.  
   
  **오류 ID:** BC30412  
   
@@ -23,6 +23,6 @@ ms.locfileid: "53780974"
   
 1.  이벤트를 발생시킬 수 있는 클래스를 지정하는 `As` 절을 추가합니다.  
   
-## <a name="see-also"></a>참고 항목  
- [WithEvents 및 Handles 절](~/docs/visual-basic/programming-guide/language-features/events/index.md#withevents-and-the-handles-clause)  
- [Dim 문](../../visual-basic/language-reference/statements/dim-statement.md)
+## <a name="see-also"></a>참고자료
+- [WithEvents 및 Handles 절](~/docs/visual-basic/programming-guide/language-features/events/index.md#withevents-and-the-handles-clause)
+- [Dim 문](../../visual-basic/language-reference/statements/dim-statement.md)
