--- a/docs/visual-basic/misc/bc31119.md
+++ b/docs/visual-basic/misc/bc31119.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC31119
 ms.assetid: 4a7e2a71-02d1-41fe-a126-3674288e6efc
-ms.openlocfilehash: 9db8088df879db3e37139791c47d3213313421f0
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: a9dfe0c7913ab05bd3a5875a49eb0535298ad661
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53782235"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54617709"
 ---
 # <a name="end-removehandler-must-be-the-first-statement-on-a-line"></a>'End RemoveHandler'는 줄의 첫 번째 문이어야 합니다.
 `End RemoveHandler` 문 앞에 콜론(:) 문 구분 기호가 있습니다. `End RemoveHandler` 은 해당 소스 줄에서 유일한 문이어야 합니다.  
@@ -23,7 +23,7 @@ ms.locfileid: "53782235"
   
 -   각 문을 서로 다른 줄로 분리합니다.  
   
-## <a name="see-also"></a>참고 항목  
- [방법: 코드에서 문 분리 및 결합](../../visual-basic/programming-guide/program-structure/how-to-break-and-combine-statements-in-code.md)  
- [RemoveHandler 문](../../visual-basic/language-reference/statements/removehandler-statement.md)  
- [Event 문](../../visual-basic/language-reference/statements/event-statement.md)
+## <a name="see-also"></a>참고자료
+- [방법: 코드에서 문 분리 및 결합](../../visual-basic/programming-guide/program-structure/how-to-break-and-combine-statements-in-code.md)
+- [RemoveHandler 문](../../visual-basic/language-reference/statements/removehandler-statement.md)
+- [Event 문](../../visual-basic/language-reference/statements/event-statement.md)
