--- a/docs/visual-basic/misc/bc33010.md
+++ b/docs/visual-basic/misc/bc33010.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC33010
 ms.assetid: ec4023e7-9ba6-4532-a6b9-4ae6b4f9063a
-ms.openlocfilehash: a44de5fa023bf1c8791373d11dcfaa97f807dc2e
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 50f40fa27ab38937818ab9f431a4bbe71bc16216
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53763398"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54704253"
 ---
 # <a name="lttypegt-parameters-cannot-be-declared-optional"></a>&lt;형식&gt; 매개 변수 'o'로 선언할 수 없습니다
 대리자, 이벤트 또는 연산자의 정의가 [Optional](../../visual-basic/language-reference/modifiers/optional.md) 매개 변수를 선언합니다.  
@@ -27,9 +27,9 @@ ms.locfileid: "53763398"
   
 -   연산자를 정의하는 경우 일련의 오버로드가 있는 `Optional` 기능을 사용할 수 있습니다.  
   
--   대리자 또는 이벤트를 정의하는 경우 응용 프로그램의 이 부분에 대한 전체 논리를 다시 작업해야 합니다. 대리자 또는 이벤트 매개 변수에서 `Optional` 이나 [ParamArray](../../visual-basic/language-reference/modifiers/paramarray.md) 매개 변수 또는 오버로드된 버전을 사용할 수 없습니다.  
+-   대리자 또는 이벤트를 정의하는 경우 애플리케이션의 이 부분에 대한 전체 논리를 다시 작업해야 합니다. 대리자 또는 이벤트 매개 변수에서 `Optional` 이나 [ParamArray](../../visual-basic/language-reference/modifiers/paramarray.md) 매개 변수 또는 오버로드된 버전을 사용할 수 없습니다.  
   
-## <a name="see-also"></a>참고 항목  
- [오버로드](../../visual-basic/language-reference/modifiers/overloads.md)  
- [연산자 프로시저](../../visual-basic/programming-guide/language-features/procedures/operator-procedures.md)  
- [Operator 문](../../visual-basic/language-reference/statements/operator-statement.md)
+## <a name="see-also"></a>참고자료
+- [오버로드](../../visual-basic/language-reference/modifiers/overloads.md)
+- [연산자 프로시저](../../visual-basic/programming-guide/language-features/procedures/operator-procedures.md)
+- [Operator 문](../../visual-basic/language-reference/statements/operator-statement.md)
