--- a/docs/visual-basic/misc/bc33109.md
+++ b/docs/visual-basic/misc/bc33109.md
@@ -7,15 +7,15 @@ f1_keywords:
 helpviewer_keywords:
 - BC33109
 ms.assetid: 135def20-3535-4239-bffb-43208d1b3f63
-ms.openlocfilehash: 4c3d5089b56b006552291685946252ce9708d942
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 025fb41c1863aededdb1ab061e186d3d75458700
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53774162"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54643867"
 ---
 # <a name="nullable-modifier-cannot-be-specified-in-variable-declarations-with-as-new"></a>'As New'를 사용하는 변수 선언에는 null 허용 한정자를 지정할 수 없습니다.
-nullable 형식 한정자(?)가 `As New`가 지정된 변수 선언에 포함되어 있습니다. 다음 예제는 이 오류를 생성합니다.  
+nullable 형식 한정자(?)가 `As New` 가 지정된 변수 선언에 포함되어 있습니다. 다음 예제는 이 오류를 생성합니다.  
   
 ```vb  
 Dim num? As New ExampleStructure  
@@ -31,5 +31,5 @@ Dim num? As New ExampleStructure
 Dim num? As ExampleStructure  
 ```  
   
-## <a name="see-also"></a>참고 항목  
- [Nullable 값 형식](../../visual-basic/programming-guide/language-features/data-types/nullable-value-types.md)
+## <a name="see-also"></a>참고자료
+- [Nullable 값 형식](../../visual-basic/programming-guide/language-features/data-types/nullable-value-types.md)
