--- a/docs/visual-basic/misc/bc30474.md
+++ b/docs/visual-basic/misc/bc30474.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30474
 ms.assetid: 7277e8cc-aa3c-40c3-8682-c8c42d2ee921
-ms.openlocfilehash: 87cc38e02929d4cfdfa1f1d37fcdc9816c49231d
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 03407c7d7bac56c5d52a210822da7fc7eb7e7f3a
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53781585"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54503264"
 ---
 # <a name="ltmethod1gt-cannot-override-ltmethod2gt-because-it-is-a-declare-statement"></a>'&lt;method1&gt;'를 재정의할 수 없습니다'&lt;method2&gt;'는 'Declare' 문 이므로
 `Declare` 문으로 선언된 기본 클래스 이름의 대리자를 재정의하려고 했습니다.  
@@ -25,6 +25,6 @@ ms.locfileid: "53781585"
   
 2.  이 메서드를 재정의하지 마세요.  
   
-## <a name="see-also"></a>참고 항목  
- [Declare 문](../../visual-basic/language-reference/statements/declare-statement.md)  
- [속성 및 파생된 클래스에서 메서드 재정의](~/docs/visual-basic/programming-guide/language-features/objects-and-classes/inheritance-basics.md#overriding-properties-and-methods-in-derived-classes)
+## <a name="see-also"></a>참고자료
+- [Declare 문](../../visual-basic/language-reference/statements/declare-statement.md)
+- [속성 및 파생된 클래스에서 메서드 재정의](~/docs/visual-basic/programming-guide/language-features/objects-and-classes/inheritance-basics.md#overriding-properties-and-methods-in-derived-classes)
