--- a/docs/visual-basic/misc/bc30782.md
+++ b/docs/visual-basic/misc/bc30782.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30782
 ms.assetid: c6b35e63-4d84-449d-9685-41a1bc0a7f35
-ms.openlocfilehash: 023b645a3119b583512dfa7b14602aba639f8443
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 13e8085de63ff9dcf6e51d5821af8620ab63a487
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53784237"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54518025"
 ---
 # <a name="continue-do-can-only-appear-inside-a-do-statement"></a>'Continue Do'는 'Do' 문 내부에만 사용할 수 있습니다.
 `Continue Do` 문은 `Do...Loop` 루프 내에서만 사용할 수 있습니다.  
@@ -27,6 +27,6 @@ ms.locfileid: "53784237"
   
 3.  그렇지 않으면 `Continue Do` 문을 제거합니다.  
   
-## <a name="see-also"></a>참고 항목  
- [Continue 문](../../visual-basic/language-reference/statements/continue-statement.md)  
- [Do...Loop 문](../../visual-basic/language-reference/statements/do-loop-statement.md)
+## <a name="see-also"></a>참고자료
+- [Continue 문](../../visual-basic/language-reference/statements/continue-statement.md)
+- [Do...Loop 문](../../visual-basic/language-reference/statements/do-loop-statement.md)
