--- a/docs/visual-basic/misc/bc31035.md
+++ b/docs/visual-basic/misc/bc31035.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC31035
 ms.assetid: 99ddabb5-20e0-4cf6-a8d4-1ca91f3c7511
-ms.openlocfilehash: aa9fd3c0ea8e6436fda8372626f1c899986d5d20
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: fae1f1faed651d3b6c3ef0785aaebdb1b4aea5b2
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53757574"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54721830"
 ---
 # <a name="interface-ltinterfacenamegt-is-not-implemented-by-this-class"></a>인터페이스 '&lt;interfacename&gt;'이 클래스에서 구현 되지 않았습니다
 이 클래스 또는 구조체의 멤버가 클래스 또는 구조체에서 구현하지 않는 인터페이스의 멤버를 구현하려고 합니다.  
@@ -25,7 +25,7 @@ ms.locfileid: "53757574"
   
 -   이 오류가 발생한 멤버에서 `Implements` 키워드를 제거합니다.  
   
-## <a name="see-also"></a>참고 항목  
- [인터페이스](../../visual-basic/programming-guide/language-features/interfaces/index.md)  
- [Implements](../../visual-basic/language-reference/statements/implements-clause.md)  
- [Implements 문](../../visual-basic/language-reference/statements/implements-statement.md)
+## <a name="see-also"></a>참고자료
+- [인터페이스](../../visual-basic/programming-guide/language-features/interfaces/index.md)
+- [Implements](../../visual-basic/language-reference/statements/implements-clause.md)
+- [Implements 문](../../visual-basic/language-reference/statements/implements-statement.md)
