--- a/docs/visual-basic/misc/bc33029.md
+++ b/docs/visual-basic/misc/bc33029.md
@@ -7,17 +7,17 @@ f1_keywords:
 helpviewer_keywords:
 - BC33029
 ms.assetid: 0d0ee461-dd48-424b-b83a-484bfc648d4d
-ms.openlocfilehash: c94797adaecc2a46eb063d88a020d9e652b9db13
-ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.openlocfilehash: aa1b05bb5399c65aea98a14d3748f88ebf8b8437
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 05/04/2018
-ms.locfileid: "33630866"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54607581"
 ---
 # <a name="conversion-operators-cannot-convert-from-an-interface-type"></a>변환 연산자는 인터페이스 형식에서 변환할 수 없습니다.
 매개 변수에 인터페이스 형식을 사용하여 변환 연산자를 선언했습니다.  
   
- 컴파일 타임에 Visual Basic은 인터페이스에서 참조 형식으로 미리 정의 된 변환이 있는 간주 합니다. 이러한 변환은 런타임에 실패할 수 있지만 컴파일러에서 런타임 결과를 예측할 수 없으므로 이러한 변환의 컴파일을 허용합니다.  
+ 컴파일 타임에 Visual Basic 인터페이스에서 참조 형식으로 미리 정의 된 변환이 있는 고려 합니다. 이러한 변환은 런타임에 실패할 수 있지만 컴파일러에서 런타임 결과를 예측할 수 없으므로 이러한 변환의 컴파일을 허용합니다.  
   
  컴파일러에서는 이 변환이 이미 정의되어 있다고 간주하므로 다시 정의할 수 없습니다.  
   
@@ -27,8 +27,8 @@ ms.locfileid: "33630866"
   
 -   이 연산자 정의를 완전히 제거합니다. 이미 미리 정의되어 있습니다.  
   
-## <a name="see-also"></a>참고 항목  
- [연산자 프로시저](../../visual-basic/programming-guide/language-features/procedures/operator-procedures.md)  
- [Operator 문](../../visual-basic/language-reference/statements/operator-statement.md)  
- [방법: 연산자 정의](../../visual-basic/programming-guide/language-features/procedures/how-to-define-an-operator.md)  
- [방법: 변환 연산자 정의](../../visual-basic/programming-guide/language-features/procedures/how-to-define-a-conversion-operator.md)
+## <a name="see-also"></a>참고자료
+- [연산자 프로시저](../../visual-basic/programming-guide/language-features/procedures/operator-procedures.md)
+- [Operator 문](../../visual-basic/language-reference/statements/operator-statement.md)
+- [방법: 연산자 정의](../../visual-basic/programming-guide/language-features/procedures/how-to-define-an-operator.md)
+- [방법: 변환 연산자를 정의 합니다.](../../visual-basic/programming-guide/language-features/procedures/how-to-define-a-conversion-operator.md)
