--- a/docs/visual-basic/misc/bc36655-bc36652.md
+++ b/docs/visual-basic/misc/bc36655-bc36652.md
@@ -10,12 +10,12 @@ helpviewer_keywords:
 - BC36655
 - BC36652
 ms.assetid: 49836f20-c877-4267-8bdc-6f6d108fb8c0
-ms.openlocfilehash: c935ae3f8463059bc17d43fcefd91c0ea04b51b4
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 9447c9c9275b6e685fefdf661312f115d6b10a3f
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53758705"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54501150"
 ---
 # <a name="data-types-of-the-type-parameters-in-extension-method-ltmethodnamegt-defined-in-lttypenamegt-cannot-be-inferred-from-these-arguments-because-more-than-one-type-is-possible"></a>확장 메서드에서 형식 매개 변수의 데이터 형식을 '&lt;methodname&gt;'에 정의 된'&lt;typename&gt;' 둘 이상의 형식이 가능 하므로이 인수에서 유추할 수 없습니다.
 확장 메서드에서 형식 매개 변수의 데이터 형식을 '\<methodname >'에 정의 된 '\<typename >' 둘 이상의 형식이 가능 하므로이 인수에서 유추할 수 없습니다. 데이터 형식을 명시적으로 지정하면 이 오류를 해결할 수 있습니다.  
@@ -60,7 +60,7 @@ End Module
     caller.targetExtension(Of String)(1, "2")  
     ```  
   
-## <a name="see-also"></a>참고 항목  
- [확장명 메서드](../../visual-basic/programming-guide/language-features/procedures/extension-methods.md)  
- [Option Strict 문](../../visual-basic/language-reference/statements/option-strict-statement.md)  
- [Generic Procedures in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-procedures.md)
+## <a name="see-also"></a>참고자료
+- [확장명 메서드](../../visual-basic/programming-guide/language-features/procedures/extension-methods.md)
+- [Option Strict 문](../../visual-basic/language-reference/statements/option-strict-statement.md)
+- [Generic Procedures in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-procedures.md)
